Commit No.3 - Database insertion and trying with vertical timeline

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 -->
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="#">Sriranga Digital Software Technologies Private Limited</a></li>
+					<li>&copy; Prabuddha Kerelam, Sri Ramakrishna Math, Thrissur, Kerela. All rights reserved.</li><li>Design: <a href="#">Sriranga Digital Software Technologies Private Limited</a></li>
 				</ul>
 			</footer>
 
