Commit No.6 - Articles,Authors and search form completed

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 <!--
 							<a href="#" class="icon fa-angle-down">About</a>
 -->
-							<a href="#">About</a>
+							<a href="about.html">About</a>
 <!--
 							<ul>
 								<li><a href="generic.html">Generic</a></li>
@@ -50,7 +50,7 @@
 -->
 						</li>
 						<li><a href="archives.php">Archives</a></li>
-						<li><a href="#">Search</a></li>
+						<li><a href="search.php">Search</a></li>
 <!--
 						<li><a href="#" class="button">Sign Up</a></li>
 -->
