Commit No.8 - Final Tweaks and finishing touch

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 					<div id="emblem" class="row">
 						<div class="12u 12u(3)">
 							<h3>Our emblem</h3>
-							<img class="image about_image"src="images/rkm_logo.png" alt="" />
+							<img class="image about_image" src="images/rkm_logo.png" alt="" />
 							<p>The emblem of the Ramakrishna Order designed by Swamiji is a unique and unparalleled work of art created by one of the richest minds in contemporary history in an exalted mood of spiritual inspiration. It is a profound symbol of harmony and synthesis for reverential meditation in this present age of conflict and disharmony. This symbol is the epitome of Swamiji’s message of harmony and synthesis, leading to life’s fulfilment. This is indeed the most eloquent expression of what he really preached, what he wanted every man and woman to be, to realize, either in the East or in the West. The goal is to realize, even in this very life, one’s real Self, the self-effulgent Atman, the Swan in the emblem and through this realization to be free of all limitations, all bondages, all littleness. This spiritual freedom is one thing to be aspired for and achieved in this very life. It releases one from one’s prison-house of limited individuality and confers upon him or her, the blessing of universal existence. He then becomes one with Existence-Knowledge-Bliss Absolute. ‘Be free. This is the whole of religion’ said Swamiji. The meaning behind this emblem, in the language of Vivekananda himself: “The wavy waters in the picture are symbolic of Karma, the lotus of Bhakti, and the rising-sun of Jnana. The encircling serpent is indicative of Yoga and awakened Kundalini Shakti, while the swan in the picture stands for Paramatman. Therefore, the ideal of the picture is that by the union of Karma, Jnana, Bhakti and Yoga, the vision of the Paramatman is obtained”</p>
 						</div>
 						<div class="12u 12u(3)">
@@ -62,7 +62,7 @@
 	<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="https://www.facebook.com/pages/Prabuddha-Keralam/528116447198404?ref=ts&fref=ts" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="https://www.facebook.com/pages/Prabuddha-Keralam/528116447198404" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Prabuddha Keralam, Sri Ramakrishna Math, Thrissur, Kerala. All rights reserved.</li><li>Design: <a href="#">Sriranga Digital Software Technologies Private Limited</a></li>
