--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					</div>
 				</div>
 				
-				<section class="box special features">
+				<section id="temp" class="box special features">
 					<div class="features-row">
 						<section>
 						<a href="php/volumes.php"><span class="icon major fa-book accent2"></span>
@@ -120,7 +120,7 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="https://www.facebook.com/pages/Prabuddha-Keralam/528116447198404?ref=ts&fref=ts" class="icon fa-facebook"><span class="label"></span></a></li>
+					<li><a href="https://www.facebook.com/pages/Prabuddha-Keralam/528116447198404" class="icon fa-facebook"><span class="label"></span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Prabuddha Keralam, Sri Ramakrishna Math, Thrissur, Kerala. All rights reserved.</li><li>Design: <a href="#">Sriranga Digital Software Technologies Private Limited</a></li>
