--- a/index.html
+++ b/index.html
@@ -80,24 +80,24 @@
 				<section id="temp" class="box special features">
 					<div class="features-row">
 						<section>
-						<a href="php/volumes.php"><span class="icon major fa-book accent2"></span>
+						<a href="php/volumes.php"><span class="icon major fa-book accent2" style="cursor:pointer;"></span>
 							<h3>Volumes</h3>
 							<p>Lists down all the volumes which are in Prabuddha Keralam.</p></a>
 						</section>
 						<section>
-							<a href="php/articles.php"><span class="icon major fa-pencil accent3"></span>
+							<a href="php/articles.php"><span class="icon major fa-pencil accent3" style="cursor:pointer;"></span>
 							<h3>Articles</h3>
 							<p>Lists down all the articles year wise which were in Prabuddha Keralam.</p></a>
 						</section>
 					</div>
 					<div class="features-row">
 						<section>
-							<a href="php/authors.php"><span class="icon major fa-user accent4"></span>
+							<a href="php/authors.php"><span class="icon major fa-user accent4" style="cursor:pointer;"></span>
 							<h3>Author</h3>
 							<p>Lists all the authors who have contributed for Prabuddha Keralam.</p></a>
 						</section>
 						<section>
-							<a href="php/search.php"><span class="icon major fa-search accent5"></span>
+							<a href="php/search.php"><span class="icon major fa-search accent5" style="cursor:pointer;"></span>
 							<h3>Search</h3>
 							<p>Search the entire volumes of Prabuddha Keralam.</p></a>
 						</section>
@@ -112,7 +112,7 @@
 				<h2>Get in touch with us</h2>
 				<h3>Sri Ramakrishna Math</h3>
 				<p>	Puranattukara P O, <br>
-					Thrissur, Kerala,India<br>
+					Thrissur,&nbsp;Kerala,&nbsp;India<br>
 					Email: rkmtsr@gmail.com<br>
 					<i class="fa fa-phone-square"></i>&nbsp; 0487-2304944<br>
 			</section>
@@ -123,7 +123,7 @@
 					<li><a href="https://www.facebook.com/pages/Prabuddha-Keralam/528116447198404" class="icon fa-facebook"><span class="label"></span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Prabuddha Keralam, Sri Ramakrishna Math, Thrissur, Kerala. All rights reserved.</li><li>Design: <a href="#">Sriranga Digital Software Technologies Private Limited</a></li>
+					<li>&copy; Prabuddha Keralam, Sri Ramakrishna Math, Thrissur, Kerala. All rights reserved.</li><li>Digitized by <a href="#">Sriranga Digital Software Technologies Private Limited</a></li>
 				</ul>
 			</footer>
 
