Commit No.14 - Re referencing the links in the new structure

--- a/php/about.html
+++ b/php/about.html
@@ -23,13 +23,13 @@
 
 		<!-- Header -->
 			<header id="header" class="skel-layers-fixed">
-				<h1><a href="index.html">Prabuddha Keralam </a> by Sri Ramakrishna Math</h1>
+				<h1><a href="../index.html">Prabuddha Keralam </a> by Sri Ramakrishna Math</h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html">Home</a></li>
+						<li><a href="../index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
 						<li><a href="archives.php">Archives</a></li>
-						<li><a href="php/search.php">Search</a></li>
+						<li><a href="search.php">Search</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -52,7 +52,7 @@
 						</div>
 						<div class="12u 12u(3)">
 							<h3>Genisis of Prabuddha Kerelam</h3>
-							<img class="image about_image" src="css/images/cover.png" alt="" />
+							<img class="image about_image" src="images/cover.png" alt="" />
 							<p>Publications in Malayalam that contained the life and message of Sri Ramakrishna, Sri Sarada Devi and Swami Vivekananda have been brought out by the Math since 1910. However, the demand for an official mouthpiece of the Order in Malayalam soon found expression in the form of ‘Prabuddhakeralam’. Initially published in Kollam with the inspiration and support of Srimad Swami Nirmalananda, the monthly magazine was later shifted to, and published at Thiruvananthapuram, Alappuzha, Ottappalam and Kalady. In 1964 the magazine office was shifted to Thrissur, with the inauguration of a publication department at the Math in 1963 as well as a letter press. Henceforth, the magazine has been published uninterruptedly. The Math brought out the Malayalam version of the ‘Complete Works of Swami Vivekananda’ in 1963, during the 100th birth anniversary celebrations of Swami Vivekananda. The Malayalam version named ‘Vivekananda Sahitya Sarvaswam’ is a set of 7 volumes and now widely popular.</p>
 						</div>
 					</div>
