Commit No.15 - Separation of header,footer,nav and sec_nav under php/

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="php/about.html">About</a></li>
+						<li><a href="php/about.php">About</a></li>
 						<li><a href="php/archives.php">Archives</a></li>
 						<li><a href="php/search.php">Search</a></li>
 					</ul>
@@ -74,7 +74,7 @@
 							<h3>Our Emblem</h3>
 							<p>The meaning behind this emblem, in the language of Vivekananda himself:<br> “The wavy waters in the picture are symbolic of Karma, the lotus of Bhakti, and the rising-sun of Jnana. The encircling serpent is indicative of Yoga and awakened Kundalini Shakti, while the swan in the picture stands for Paramatman. Therefore, the ideal of the picture is that by the union of Karma, Jnana, Bhakti and Yoga, the vision of the Paramatman is obtained”</p>
 							<ul class="actions">
-								<li><a href="php/about.html#emblem" class="button alt">More</a></li>
+								<li><a href="php/about.php#emblem" class="button alt">More</a></li>
 							</ul>
 						</section>
 						
