Commit No. 18 - Style chnages across

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<script src="php/js/skel.min.js"></script>
 		<script src="php/js/skel-layers.min.js"></script>
 		<script src="php/js/init.js"></script>
+		<script src="php/js/modernizr.custom.js"></script>
 		<link rel="shortcut icon" type="image/ico" href="php/images/favicon.ico" />
 <!--
 		<noscript>
