--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<img src="php/images/rkm_logo.png" alt="" />
 				</div>
 				<h2>പ്രബുദ്ധ കേരളം</h2>
-				<p>A Ramakrishna Math Publication.</p>
+				<p>A Ramakrishna Math Publication</p>
 			</section>
 
 		<!-- Main -->
@@ -87,24 +87,24 @@
 						<section>
 						<a href="php/volumes.php"><span class="icon major fa-book accent2" style="cursor:pointer;"></span>
 							<h3>Volumes</h3>
-							<p>Lists down all the volumes which are in Prabuddha Keralam.</p></a>
+							<p>List of all volumes published till date</p></a>
 						</section>
 						<section>
 							<a href="php/articles.php"><span class="icon major fa-pencil accent3" style="cursor:pointer;"></span>
 							<h3>Articles</h3>
-							<p>Lists down all the articles year wise which were in Prabuddha Keralam.</p></a>
+							<p>List of all articles sorted alphabetically</p></a>
 						</section>
 					</div>
 					<div class="features-row">
 						<section>
 							<a href="php/authors.php"><span class="icon major fa-user accent4" style="cursor:pointer;"></span>
-							<h3>Author</h3>
-							<p>Lists all the authors who have contributed for Prabuddha Keralam.</p></a>
+							<h3>Authors</h3>
+							<p>List of all authors in alphabetic order</p></a>
 						</section>
 						<section>
 							<a href="php/search.php"><span class="icon major fa-search accent5" style="cursor:pointer;"></span>
 							<h3>Search</h3>
-							<p>Search the entire volumes of Prabuddha Keralam.</p></a>
+							<p>Search through the entire collection</p></a>
 						</section>
 					</div>
 				</section>
@@ -118,7 +118,7 @@
 				<h3>Sri Ramakrishna Math</h3>
 				<p>	Puranattukara P O, <br>
 					Thrissur,&nbsp;Kerala,&nbsp;India<br>
-					Email: rkmtsr@gmail.com<br>
+					rkmtsr@gmail.com<br>
 					<i class="fa fa-phone-square"></i>&nbsp; 0487-2304944<br>
 			</section>
 			
@@ -128,7 +128,8 @@
 					<li><a href="https://www.facebook.com/pages/Prabuddha-Keralam/528116447198404" class="icon fa-facebook"><span class="label"></span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Prabuddha Keralam, Sri Ramakrishna Math, Thrissur, Kerala. All rights reserved.</li><li>Digitized by <a href="#">Sriranga Digital Software Technologies Private Limited</a></li>
+					<li style="width: 50%">&copy; Sri Ramakrishna Math, Thrissur, Kerala.<br />All rights reserved.</li>
+					<li style="width: 50%">Digitized by<br /><a href="#">Sriranga Digital Software Technologies Private Limited</a></li>
 				</ul>
 			</footer>
 
