Commit No. 25 - pre-flight changes, rendering issues solved to an extent

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<h3>Our Emblem</h3>
 						<p class="width-75">The meaning behind this emblem, in the language of Vivekananda himself:<br> “The wavy waters in the picture are symbolic of Karma, the lotus of Bhakti, and the rising-sun of Jnana. The encircling serpent is indicative of Yoga and awakened Kundalini Shakti, while the swan in the picture stands for Paramatman. Therefore, the ideal of the picture is that by the union of Karma, Jnana, Bhakti and Yoga, the vision of the Paramatman is obtained”</p>
 						<ul class="actions">
-							<li><a href="php/about.php#emblem" class="button alt">More</a></li>
+							<li><a href="php/about.php#emblem" class="button alt" style="width:150px">More</a></li>
 						</ul>
 					</section>
 				</div>
@@ -121,7 +121,7 @@
 			</ul>
 			<ul class="copyright">
 				<li style="width: 50%">&copy; Sri Ramakrishna Math, Thrissur, Kerala.<br />All rights reserved.</li>
-				<li style="width: 50%">Digitized by<br /><a href="#">Sriranga Digital Software Technologies Private Limited</a></li>
+				<li style="width: 50%">Digitized by<br /><a href="http://www.srirangadigital.com/">Sriranga Digital Software Technologies Private Limited</a></li>
 			</ul>
 		</footer>
 	</body>
