No. 39 - Title and Introduction on home page modified

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Prabuddha Keralam</title>
+		<title>Prabuddhakeralam</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -28,7 +28,7 @@
 	</head>
 	<body class="landing">
 		<header id="header" class="alt">
-			<h1><a href="index.html">Prabuddha Keralam </a> by Sri Ramakrishna Math</h1>
+			<h1><a href="index.html">Prabuddhakeralam </a> by Sri Ramakrishna Math</h1>
 			<nav id="nav">
 				<ul>
 					<li><a href="index.html">Home</a></li>
@@ -42,7 +42,7 @@
 			<div class="img">
 				<img src="php/images/rkm_logo.png" alt="" />
 			</div>
-			<h2 class="fmal">പ്രബുദ്ധ കേരളം</h2>
+			<h2 class="fmal">പ്രബുദ്ധകേരളം</h2>
 			<p>A Ramakrishna Math Publication</p>
 		</section>
 		<section id="main" class="container">
@@ -54,7 +54,7 @@
 						പ്രബുദ്ധകേരളം രാമ-<br />
 						കൃഷ്ണോ രക്ഷതു സർവ്വദാ.<i class="fa fa-quote-right"></i>
 					</h3>
-					<p class="fmal">ഭാരതം മാനവസമുദായത്തിനു നൽകിയ ആദ്ധ്യാത്മികപൈതൃകങ്ങളുടെയെല്ലാം ആകെത്തുകയായിരുന്നു ഭഗവാൻ ശ്രീരാമകൃഷ്‌ണൻ. ശ്രീരാമകൃഷ്ണൻ്റെ പേരിൽ അവിടുത്തെ ശിഷ്യോത്തമനായ വിവേകാനന്ദസ്വാമികൾ  1897-ൽ രൂപം കൊടുത്ത വിശ്വവ്യാപിയായ രാമകൃഷ്ണ മിഷനിലൂടെ  ഉപനിഷദ്‌കേന്ദ്രീകൃതമായ അമൂല്യജ്ഞാനം ലോകമെങ്ങും എത്തിക്കൊണ്ടിരിക്കുന്നു.<br /><br />ശ്രേഷ്ഠമായ ഈ ജ്ഞാനവിതരണദൗത്യത്തിൻ്റെ  ഭാഗമായി കേരളീയർക്കിടയിൽ ശ്രീമദ് നിർമ്മലാനന്ദസ്വാമികളാൽ പ്രസിദ്ധീകരണമാരംഭിച്ച (1915) ആദ്ധ്യാത്മികമാസികയാണ് പ്രബുദ്ധകേരളം. രാമകൃഷ്ണമിഷൻ്റെ ശാഖയായി തൃശ്ശൂരിൽ 1927-ൽ സ്ഥാപിക്കപ്പെട്ട ശ്രീരാമകൃഷ്‌ണമഠം പ്രബുദ്ധകേരളത്തിൻ്റെ പ്രസിദ്ധീകരണച്ചുമതല 1964-ൽ എറ്റെടുത്തു. വേദാന്തസന്ദേശങ്ങളെ മലയാളികളുടെ ജീവിതവുമായി കൂട്ടിയിണക്കിക്കൊണ്ട് വിജയകരമായി വ്യാപരിച്ചുകൊണ്ടിരിക്കുകയാണ് ഇന്ന് ഈ മാസിക.<br /><br />ഭാരതീയമായ ഋഷിസന്ദേശത്തെ ജീവിതകലയാക്കി പരിചയപ്പെടുത്തിക്കൊണ്ട് കേരളക്കരയെ പ്രബുദ്ധമാക്കുകയെന്ന ദൗത്യമാണ് പ്രബുദ്ധകേരളത്തിനുള്ളത്. ഇക്കാര്യത്തിന് ഈ മാസിക കേന്ദ്രമാക്കുന്നത്, സകലജീവൻ്റെയും ഉറവിടമായ സത്യത്തെ ജീവിതത്തിൽ സാക്ഷാത്കരിക്കുകമാത്രമാണ് ഓരോ മനുഷ്യൻ്റെയും ലക്ഷ്യമെന്നും അതിനായി വ്യത്യസ്തമാർഗ്ഗങ്ങൾ എത്ര വേണമെങ്കിലും അവലംബിക്കാമെന്നും സ്വജീവിതംകൊണ്ടു വ്യക്തമാക്കിത്തന്ന ശ്രീരാമകൃഷ്ണ-ശാരദാ-വിവേകാനന്ദന്മാരുടെ ജീവിതോപദേശങ്ങളാണ്. <br /><br />നാമെല്ലാം ഒന്നാണെന്നു ലോകത്തോട് പ്രഖ്യാപിച്ച അവരുടെ കാരുണ്യവും ജീവിതദർശനവും ഈ മണ്ണിൽ വളരുന്നതിനായി ഈ മാസിക ശ്രമിച്ചുകൊണ്ടേയിരിക്കുന്നു. പഠനങ്ങളിലൂടെയും ലേഖനങ്ങളിലൂടെയുമൊക്കെ മലയാളികളുടെ അകത്തളങ്ങളിൽ കുടിയിരിക്കപ്പെട്ട ഈ ജ്ഞാനകുംഭത്തെ സ്വീകരിക്കുക, ഈ അക്ഷരക്കഷായം പാനം ചെയ്തു ധന്യരാവുക.</p>
+					<p class="fmal">ഭാരതം മാനവസമുദായത്തിനു നൽകിയ ആദ്ധ്യാത്മികപൈതൃകങ്ങളുടെയെല്ലാം ആകെത്തുകയായിരുന്നു ഭഗവാൻ ശ്രീരാമകൃഷ്‌ണൻ. ശ്രീരാമകൃഷ്ണ&#x200C;െൻറ പേരിൽ അവിടുത്തെ ശിഷ്യോത്തമനായ വിവേകാനന്ദസ്വാമികൾ  1897-ൽ രൂപം കൊടുത്ത വിശ്വവ്യാപിയായ രാമകൃഷ്ണ മിഷനിലൂടെ  ഉപനിഷദ്‌കേന്ദ്രീകൃതമായ അമൂല്യജ്ഞാനം ലോകമെങ്ങും എത്തിക്കൊണ്ടിരിക്കുന്നു.<br /><br />ശ്രേഷ്ഠമായ ഈ ജ്ഞാനവിതരണദൗത്യത്തി&#x200C;െൻറ  ഭാഗമായി കേരളീയർക്കിടയിൽ ശ്രീമദ് നിർമ്മലാനന്ദസ്വാമികളാൽ പ്രസിദ്ധീകരണമാരംഭിച്ച (1915) ആദ്ധ്യാത്മികമാസികയാണ് പ്രബുദ്ധകേരളം. രാമകൃഷ്ണമിഷ&#x200C;െൻറ ശാഖയായി തൃശ്ശൂരിൽ 1927-ൽ സ്ഥാപിക്കപ്പെട്ട ശ്രീരാമകൃഷ്‌ണമഠം പ്രബുദ്ധകേരളത്തി&#x200C;െൻറ പ്രസിദ്ധീകരണച്ചുമതല 1964-ൽ എറ്റെടുത്തു. വേദാന്തസന്ദേശങ്ങളെ മലയാളികളുടെ ജീവിതവുമായി കൂട്ടിയിണക്കിക്കൊണ്ട് വിജയകരമായി വ്യാപരിച്ചുകൊണ്ടിരിക്കുകയാണ് ഇന്ന് ഈ മാസിക.<br /><br />ഭാരതീയമായ ഋഷിസന്ദേശത്തെ ജീവിതകലയാക്കി പരിചയപ്പെടുത്തിക്കൊണ്ട് കേരളക്കരയെ പ്രബുദ്ധമാക്കുകയെന്ന ദൗത്യമാണ് പ്രബുദ്ധകേരളത്തിനുള്ളത്. ഇക്കാര്യത്തിന് ഈ മാസിക കേന്ദ്രമാക്കുന്നത്, സകലജീവ&#x200C;െൻറയും ഉറവിടമായ സത്യത്തെ ജീവിതത്തിൽ സാക്ഷാത്കരിക്കുകമാത്രമാണ് ഓരോ മനുഷ്യ&#x200C;െൻറയും ലക്ഷ്യമെന്നും അതിനായി വ്യത്യസ്തമാർഗ്ഗങ്ങൾ എത്ര വേണമെങ്കിലും അവലംബിക്കാമെന്നും സ്വജീവിതംകൊണ്ടു വ്യക്തമാക്കിത്തന്ന ശ്രീരാമകൃഷ്ണ-ശാരദാ-വിവേകാനന്ദന്മാരുടെ ജീവിതോപദേശങ്ങളാണ്. <br /><br />നാമെല്ലാം ഒന്നാണെന്നു ലോകത്തോട് പ്രഖ്യാപിച്ച അവരുടെ കാരുണ്യവും ജീവിതദർശനവും ഈ മണ്ണിൽ വളരുന്നതിനായി ഈ മാസിക ശ്രമിച്ചുകൊണ്ടേയിരിക്കുന്നു. പഠനങ്ങളിലൂടെയും ലേഖനങ്ങളിലൂടെയുമൊക്കെ മലയാളികളുടെ അകത്തളങ്ങളിൽ കുടിയിരിക്കപ്പെട്ട ഈ ജ്ഞാനകുംഭത്തെ സ്വീകരിക്കുക, ഈ അക്ഷരക്കഷായം പാനം ചെയ്തു ധന്യരാവുക.</p>
 				</header>
 				<span class="image "><img src="php/images/pke.png" alt="" /></span>
 			</section>
