No. 43 - Image modified in home page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<p>A Ramakrishna Math Publication</p>
 		</section>
 		<section id="main" class="container">
-			<section class="box special">
+			<section class="newbox special">
 				<header class="major">
 					<h3 class="fmal acenter">
 						<i class="fa fa-quote-left "></i> വിവേകനിർമ്മലാനന്ദ<br />
