No. 60 - Period added for Volumes in archives page

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 					<li><a href="php/about.php">About</a></li>
 					<li><a href="php/archives.php">Archives</a></li>
 					<li><a href="php/search.php">Search</a></li>
+					<li><a href="php/help.php">Help</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -79,7 +80,7 @@
 						<a href="php/volumes.php">
 							<span class="icon major fa-book accent2" style="cursor:pointer;"></span>
 							<h3>Volumes</h3>
-							<p>List of all volumes published till date</p>
+							<p>List of all volumes published from 1915 to 2015</p>
 						</a>
 					</section>
 					<section>
@@ -123,8 +124,8 @@
 				<li><a href="https://www.facebook.com/pages/Prabuddha-Keralam/528116447198404" class="icon fa-facebook"><span class="label"></span></a></li>
 			</ul>
 			<ul class="copyright">
-				<li style="width: 50%">&copy; Sri Ramakrishna Math, Thrissur, Kerala.<br />All rights reserved.</li>
-				<li style="width: 50%">Digitized by<br /><a href="http://www.srirangadigital.com/">Sriranga Digital Software Technologies Private Limited</a></li>
+				<li style="width: 50%">&copy; Sri Ramakrishna Math, Thrissur, Kerala.<br />All rights reserved.<br /><a href="http://www.rkmthrissur.org/" target="_blank">www.rkmthrissur.org</a></li>
+				<li style="width: 50%">Digitized by<br /><a href="http://www.srirangadigital.com/" target="_blank">Sriranga Digital Software Technologies Private Limited</a></li>
 			</ul>
 		</footer>
 	</body>
