No. 72 -  changed link to resources

--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<script src="php/js/jquery.min.js"></script>
-		<script src="php/js/jquery.dropotron.min.js"></script>
-		<script src="php/js/jquery.scrollgress.min.js"></script>
-		<script src="php/js/skel.min.js"></script>
-		<script src="php/js/skel-layers.min.js"></script>
-		<script src="php/js/initIndex.js"></script>
-		<script src="php/js/modernizr.custom.js"></script>
-		<link rel="shortcut icon" type="image/ico" href="php/images/favicon.ico" />
+		<script src="html/js/jquery.min.js"></script>
+		<script src="html/js/jquery.dropotron.min.js"></script>
+		<script src="html/js/jquery.scrollgress.min.js"></script>
+		<script src="html/js/skel.min.js"></script>
+		<script src="html/js/skel-layers.min.js"></script>
+		<script src="html/js/initIndex.js"></script>
+		<script src="html/js/modernizr.custom.js"></script>
+		<link rel="shortcut icon" type="image/ico" href="html/images/favicon.ico" />
 <!--
 		<noscript>
 -->
-			<link rel="stylesheet" href="php/css/skel.css" />
-			<link rel="stylesheet" href="php/css/style.css" />
-			<link rel="stylesheet" href="php/css/style-wide.css" />
+			<link rel="stylesheet" href="html/css/skel.css" />
+			<link rel="stylesheet" href="html/css/style.css" />
+			<link rel="stylesheet" href="html/css/style-wide.css" />
 			
 <!--
 		</noscript>
@@ -32,16 +32,16 @@
 			<nav id="nav">
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="php/about.php">About</a></li>
-					<li><a href="php/archives.php">Archives</a></li>
-					<li><a href="php/search.php">Search</a></li>
-					<li><a href="php/help.php">Help</a></li>
+					<li><a href="html/about.html">About</a></li>
+					<li><a href="html/archives.html">Archives</a></li>
+					<li><a href="html/search.php">Search</a></li>
+					<li><a href="html/help.html">Help</a></li>
 				</ul>
 			</nav>
 		</header>
 		<section id="banner">
 			<div class="img">
-				<img src="php/images/rkm_logo.png" alt="" />
+				<img src="html/images/rkm_logo.png" alt="" />
 			</div>
 			<h2 class="fmal">പ്രബുദ്ധകേരളം</h2>
 			<p>A Ramakrishna Math Publication</p>
@@ -60,16 +60,16 @@
 					<br /><br />ഭാരതീയമായ ഋഷിസന്ദേശത്തെ ജീവിതകലയാക്കി പരിചയപ്പെടുത്തിക്കൊണ്ട് കേരളക്കരയെ പ്രബുദ്ധമാക്കുകയെന്ന ദൗത്യമാണ് പ്രബുദ്ധകേരളത്തിനുള്ളത്. ഇക്കാര്യത്തിന് ഈ മാസിക കേന്ദ്രമാക്കുന്നത്, സകലജീവൻെറയും ഉറവിടമായ സത്യത്തെ ജീവിതത്തിൽ സാക്ഷാത്കരിക്കുകമാത്രമാണ് ഓരോ മനുഷ്യൻെറയും ലക്ഷ്യമെന്നും അതിനായി വ്യത്യസ്തമാർഗ്ഗങ്ങൾ എത്ര വേണമെങ്കിലും അവലംബിക്കാമെന്നും സ്വജീവിതംകൊണ്ടു വ്യക്തമാക്കിത്തന്ന ശ്രീരാമകൃഷ്ണ-ശാരദാ-വിവേകാനന്ദന്മാരുടെ ജീവിതോപദേശങ്ങളാണ്.
 					<br /><br />നാമെല്ലാം ഒന്നാണെന്നു ലോകത്തോട് പ്രഖ്യാപിച്ച അവരുടെ കാരുണ്യവും ജീവിതദർശനവും ഈ മണ്ണിൽ വളരുന്നതിനായി ഈ മാസിക ശ്രമിച്ചുകൊണ്ടേയിരിക്കുന്നു. പഠനങ്ങളിലൂടെയും ലേഖനങ്ങളിലൂടെയുമൊക്കെ മലയാളികളുടെ അകത്തളങ്ങളിൽ കുടിയിരിക്കപ്പെട്ട ഈ ജ്ഞാനകുംഭത്തെ സ്വീകരിക്കുക, ഈ അക്ഷരക്കഷായം പാനം ചെയ്തു ധന്യരാവുക.</p>
 				</header>
-				<span class="image "><img src="php/images/pke.png" alt="" /></span>
+				<span class="image "><img src="html/images/pke.png" alt="" /></span>
 			</section>
 			<div class="row">
 				<div class="12u 12u(2)">
 					<section class="box special">
-						<img src="php/images/rkm_logo.png" alt="" />
+						<img src="html/images/rkm_logo.png" alt="" />
 						<h3>Our Emblem</h3>
 						<p class="width-75">The meaning behind this emblem, in the language of Vivekananda himself:<br> “The wavy waters in the picture are symbolic of Karma, the lotus of Bhakti, and the rising-sun of Jnana. The encircling serpent is indicative of Yoga and awakened Kundalini Shakti, while the swan in the picture stands for Paramatman. Therefore, the ideal of the picture is that by the union of Karma, Jnana, Bhakti and Yoga, the vision of the Paramatman is obtained”</p>
 						<ul class="actions">
-							<li><a href="php/about.php#emblem" class="button alt" style="width:150px">More</a></li>
+							<li><a href="html/about.html#emblem" class="button alt" style="width:150px">More</a></li>
 						</ul>
 					</section>
 				</div>
@@ -77,14 +77,14 @@
 			<section id="temp" class="box special features">
 				<div class="features-row">
 					<section>
-						<a href="php/volumes.php">
+						<a href="html/volumes.html">
 							<span class="icon major fa-book accent2" style="cursor:pointer;"></span>
 							<h3>Volumes</h3>
 							<p>List of all volumes published from 1915 to 2015</p>
 						</a>
 					</section>
 					<section>
-						<a href="php/articles.php">
+						<a href="html/articles.html">
 							<span class="icon major fa-pencil accent3" style="cursor:pointer;"></span>
 							<h3>Articles</h3>
 							<p>List of all articles sorted alphabetically</p>
@@ -93,14 +93,14 @@
 				</div>
 				<div class="features-row">
 					<section>
-						<a href="php/authors.php">
+						<a href="html/authors.html">
 							<span class="icon major fa-user accent4" style="cursor:pointer;"></span>
 							<h3>Authors</h3>
 							<p>List of all authors in alphabetic order</p>
 						</a>
 					</section>
 					<section>
-						<a href="php/search.php">
+						<a href="html/search.php">
 							<span class="icon major fa-search accent5" style="cursor:pointer;"></span>
 							<h3>Search</h3>
 							<p>Search through the entire collection</p>
