Commit No. 76 - articles - special now included numerals

--- a/html/articles_40.html
+++ b/html/articles_40.html
@@ -99,7 +99,23 @@
 				<span class="letter"><a href="articles_39.html">ഹ</a></span>
 				<span class="letter"><a href="articles_40.html">#</a></span>
 			</div>
-						<ul><li><span class="titlespan"><a target="_blank" href="../Volumes/055/11/index.djvu?djvuopts&amp;page=0488.djvu&amp;zoom=page">Book Review</a></span>
+						<ul><li><span class="titlespan"><a target="_blank" href="../Volumes/100/11/index.djvu?djvuopts&amp;page=0597.djvu&amp;zoom=page">1 9 0 2 ജൂലൈ 4 (കവിത)</a></span>
+								<span class="titlespan">&nbsp;&nbsp;|&nbsp;&nbsp;</span>
+								<span class="yearspan">
+									<a href="toc_100_11.html">November 2015 &nbsp;(Volume&nbsp;100, Issue&nbsp;11)</a>
+								</span><br /><span class="authorspan"><a href="auth_11890.html">&nbsp;&nbsp;ആര്യാട് കൃഷ്‌ണൻകുട്ടി</a></span></li><li><span class="titlespan"><a target="_blank" href="../Volumes/084/06/index.djvu?djvuopts&amp;page=0211.djvu&amp;zoom=page">1998-ലെ ഗാന്ധി പീസ് പുരസ്കാരം രാമകൃഷ്ണമിഷന്</a></span>
+								<span class="titlespan">&nbsp;&nbsp;|&nbsp;&nbsp;</span>
+								<span class="yearspan">
+									<a href="toc_084_06.html">June 1999 &nbsp;(Volume&nbsp;84, Issue&nbsp;6)</a>
+								</span></li><li><span class="titlespan"><a target="_blank" href="../Volumes/090/06/index.djvu?djvuopts&amp;page=0237.djvu&amp;zoom=page">4-ആമത് അഖിലകേരള ശ്രീരാമകൃഷ്ണഭക്തസമ്മേളനം</a></span>
+								<span class="titlespan">&nbsp;&nbsp;|&nbsp;&nbsp;</span>
+								<span class="yearspan">
+									<a href="toc_090_06.html">June 2005 &nbsp;(Volume&nbsp;90, Issue&nbsp;6)</a>
+								</span></li><li><span class="titlespan"><a target="_blank" href="../Volumes/090/07/index.djvu?djvuopts&amp;page=0273.djvu&amp;zoom=page">4-ആമത് ശ്രീരാമകൃഷ്ണഭക്തസമ്മേളനം - ഒരവലോകനം</a></span>
+								<span class="titlespan">&nbsp;&nbsp;|&nbsp;&nbsp;</span>
+								<span class="yearspan">
+									<a href="toc_090_07.html">July 2005 &nbsp;(Volume&nbsp;90, Issue&nbsp;7)</a>
+								</span><br /><span class="authorspan"><a href="auth_11465.html">&nbsp;&nbsp;പ്രൊഫ. ബി. സുലോചനാ നായര്‍</a></span></li><li><span class="titlespan"><a target="_blank" href="../Volumes/055/11/index.djvu?djvuopts&amp;page=0488.djvu&amp;zoom=page">Book Review</a></span>
 								<span class="titlespan">&nbsp;&nbsp;|&nbsp;&nbsp;</span>
 								<span class="yearspan">
 									<a href="toc_055_11.html">November 1970 &nbsp;(Volume&nbsp;55, Issue&nbsp;11)</a>
